[package]
name = "pur-chaser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.32.0"
egui = { version = "0.23.0", features = ["persistence"] }
eframe = "0.23.0"
simple_crypt = "0.2.3"
camino = "1.1.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
egui_extras = "0.23.0"
chrono = "0.4.31"
whoami = "1.4.1"
rfd = "0.12.1"
soa_derive = "0.13.0"

[profile.release] 
debug = true
